packages/greyalien-prototype/greyalien_prototype-0.3.0.tar.gz/greyalien_prototype-0.3.0/tests/conformance/fail/enum_payload_type.grl
enum Option { None, Some(Int) }

fn main() {
  let x = Some("nope");
  print(x);
}
